src/test/deca/context/invalid/provided/Child_class_New_Mother.deca
class B{}
class A extends B {}


{
     A a  =  new B();
}